--- a/umbrello/codegenerators/rubycodegenerationformbase.ui
+++ b/umbrello/codegenerators/rubycodegenerationformbase.ui
@@ -1,248 +1,217 @@
-<!DOCTYPE UI><UI version="3.2" stdsetdef="1">
-<class>RubyCodeGenerationFormBase</class>
-<widget class="QWidget">
-    <property name="name">
-        <cstring>Form1</cstring>
-    </property>
-    <property name="geometry">
-        <rect>
-            <x>0</x>
-            <y>0</y>
-            <width>462</width>
-            <height>376</height>
-        </rect>
-    </property>
-    <grid>
-        <property name="name">
-            <cstring>unnamed</cstring>
-        </property>
-        <widget class="QLayoutWidget" row="0" column="0">
-            <property name="name">
-                <cstring>layout6</cstring>
+<ui version="4.0" >
+ <class>RubyCodeGenerationFormBase</class>
+ <widget class="QWidget" name="RubyCodeGenerationFormBase" >
+  <property name="geometry" >
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>462</width>
+    <height>376</height>
+   </rect>
+  </property>
+  <layout class="QGridLayout" >
+   <item row="0" column="0" >
+    <layout class="QGridLayout" >
+     <item row="2" column="0" >
+      <widget class="Q3GroupBox" name="groupBox2" >
+       <property name="sizePolicy" >
+        <sizepolicy vsizetype="Maximum" hsizetype="Preferred" >
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="title" >
+        <string>Auto-Generate Methods</string>
+       </property>
+       <layout class="QGridLayout" >
+        <item row="0" column="0" >
+         <layout class="QGridLayout" >
+          <item row="0" column="0" >
+           <widget class="QCheckBox" name="m_generateConstructors" >
+            <property name="text" >
+             <string>Empty constructor methods</string>
             </property>
-            <grid>
-                <property name="name">
-                    <cstring>unnamed</cstring>
-                </property>
-                <widget class="QGroupBox" row="2" column="0">
-                    <property name="name">
-                        <cstring>groupBox2</cstring>
-                    </property>
-                    <property name="sizePolicy">
-                        <sizepolicy>
-                            <hsizetype>5</hsizetype>
-                            <vsizetype>4</vsizetype>
-                            <horstretch>0</horstretch>
-                            <verstretch>0</verstretch>
-                        </sizepolicy>
-                    </property>
-                    <property name="title">
-                        <string>Auto-Generate Methods</string>
-                    </property>
-                    <grid>
-                        <property name="name">
-                            <cstring>unnamed</cstring>
-                        </property>
-                        <widget class="QLayoutWidget" row="0" column="0">
-                            <property name="name">
-                                <cstring>layout2</cstring>
-                            </property>
-                            <grid>
-                                <property name="name">
-                                    <cstring>unnamed</cstring>
-                                </property>
-                                <widget class="QCheckBox" row="0" column="0">
-                                    <property name="name">
-                                        <cstring>m_generateConstructors</cstring>
-                                    </property>
-                                    <property name="text">
-                                        <string>Empty constructor methods</string>
-                                    </property>
-                                    <property name="checked">
-                                        <bool>false</bool>
-                                    </property>
-                                </widget>
-                                <widget class="QCheckBox" row="2" column="0">
-                                    <property name="name">
-                                        <cstring>m_generateAssocAccessors</cstring>
-                                    </property>
-                                    <property name="text">
-                                        <string>Association accessor methods</string>
-                                    </property>
-                                    <property name="checked">
-                                        <bool>true</bool>
-                                    </property>
-                                </widget>
-                                <widget class="QCheckBox" row="1" column="0">
-                                    <property name="name">
-                                        <cstring>m_generateAttribAccessors</cstring>
-                                    </property>
-                                    <property name="text">
-                                        <string>Attribute accessor methods</string>
-                                    </property>
-                                    <property name="checked">
-                                        <bool>true</bool>
-                                    </property>
-                                </widget>
-                            </grid>
-                        </widget>
-                        <widget class="QLayoutWidget" row="1" column="0">
-                            <property name="name">
-                                <cstring>layout4</cstring>
-                            </property>
-                            <grid>
-                                <property name="name">
-                                    <cstring>unnamed</cstring>
-                                </property>
-                                <widget class="QComboBox" row="0" column="1">
-                                    <item>
-                                        <property name="text">
-                                            <string>Public</string>
-                                        </property>
-                                    </item>
-                                    <item>
-                                        <property name="text">
-                                            <string>Private</string>
-                                        </property>
-                                    </item>
-                                    <item>
-                                        <property name="text">
-                                            <string>Protected</string>
-                                        </property>
-                                    </item>
-                                    <item>
-                                        <property name="text">
-                                            <string>From Parent Object</string>
-                                        </property>
-                                    </item>
-                                    <property name="name">
-                                        <cstring>m_accessorScopeCB</cstring>
-                                    </property>
-                                    <property name="currentItem">
-                                        <number>3</number>
-                                    </property>
-                                </widget>
-                                <widget class="QLabel" row="0" column="0">
-                                    <property name="name">
-                                        <cstring>textLabel1_3</cstring>
-                                    </property>
-                                    <property name="text">
-                                        <string>Default attribute accessor scope:</string>
-                                    </property>
-                                </widget>
-                            </grid>
-                        </widget>
-                        <widget class="QLayoutWidget" row="2" column="0">
-                            <property name="name">
-                                <cstring>layout4</cstring>
-                            </property>
-                            <grid>
-                                <property name="name">
-                                    <cstring>unnamed</cstring>
-                                </property>
-                                <widget class="QLabel" row="0" column="0">
-                                    <property name="name">
-                                        <cstring>textLabel1_3_2</cstring>
-                                    </property>
-                                    <property name="text">
-                                        <string>Default association field scope:</string>
-                                    </property>
-                                </widget>
-                                <widget class="QComboBox" row="0" column="1">
-                                    <item>
-                                        <property name="text">
-                                            <string>Public</string>
-                                        </property>
-                                    </item>
-                                    <item>
-                                        <property name="text">
-                                            <string>Private</string>
-                                        </property>
-                                    </item>
-                                    <item>
-                                        <property name="text">
-                                            <string>Protected</string>
-                                        </property>
-                                    </item>
-                                    <item>
-                                        <property name="text">
-                                            <string>From Parent Role</string>
-                                        </property>
-                                    </item>
-                                    <property name="name">
-                                        <cstring>m_assocFieldScopeCB</cstring>
-                                    </property>
-                                    <property name="currentItem">
-                                        <number>3</number>
-                                    </property>
-                                </widget>
-                            </grid>
-                        </widget>
-                    </grid>
-                </widget>
-                <widget class="QGroupBox" row="1" column="0">
-                    <property name="name">
-                        <cstring>groupBox1</cstring>
-                    </property>
-                    <property name="sizePolicy">
-                        <sizepolicy>
-                            <hsizetype>5</hsizetype>
-                            <vsizetype>4</vsizetype>
-                            <horstretch>0</horstretch>
-                            <verstretch>0</verstretch>
-                        </sizepolicy>
-                    </property>
-                    <property name="title">
-                        <string>Documentation</string>
-                    </property>
-                    <hbox>
-                        <property name="name">
-                            <cstring>unnamed</cstring>
-                        </property>
-                        <widget class="QLabel">
-                            <property name="name">
-                                <cstring>textLabel1</cstring>
-                            </property>
-                            <property name="text">
-                                <string>Style:</string>
-                            </property>
-                        </widget>
-                        <widget class="QComboBox">
-                            <item>
-                                <property name="text">
-                                    <string>Hash (#)</string>
-                                </property>
-                            </item>
-                            <item>
-                                <property name="text">
-                                    <string>Begin-End (=begin  =end)</string>
-                                </property>
-                            </item>
-                            <property name="name">
-                                <cstring>m_SelectCommentStyle</cstring>
-                            </property>
-                        </widget>
-                    </hbox>
-                </widget>
-                <widget class="QLabel" row="0" column="0">
-                    <property name="name">
-                        <cstring>textLabel1_2</cstring>
-                    </property>
-                    <property name="sizePolicy">
-                        <sizepolicy>
-                            <hsizetype>5</hsizetype>
-                            <vsizetype>4</vsizetype>
-                            <horstretch>0</horstretch>
-                            <verstretch>0</verstretch>
-                        </sizepolicy>
-                    </property>
-                    <property name="text">
-                        <string>&lt;p align="center"&gt;Ruby Code Generation&lt;/p&gt;</string>
-                    </property>
-                </widget>
-            </grid>
-        </widget>
-    </grid>
-</widget>
-<layoutdefaults spacing="6" margin="11"/>
-</UI>
+            <property name="checked" >
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0" >
+           <widget class="QCheckBox" name="m_generateAssocAccessors" >
+            <property name="text" >
+             <string>Association accessor methods</string>
+            </property>
+            <property name="checked" >
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0" >
+           <widget class="QCheckBox" name="m_generateAttribAccessors" >
+            <property name="text" >
+             <string>Attribute accessor methods</string>
+            </property>
+            <property name="checked" >
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="1" column="0" >
+         <layout class="QGridLayout" >
+          <item row="0" column="1" >
+           <widget class="QComboBox" name="m_accessorScopeCB" >
+            <property name="currentIndex" >
+             <number>3</number>
+            </property>
+            <item>
+             <property name="text" >
+              <string>Public</string>
+             </property>
+            </item>
+            <item>
+             <property name="text" >
+              <string>Private</string>
+             </property>
+            </item>
+            <item>
+             <property name="text" >
+              <string>Protected</string>
+             </property>
+            </item>
+            <item>
+             <property name="text" >
+              <string>From Parent Object</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+          <item row="0" column="0" >
+           <widget class="QLabel" name="textLabel1_3" >
+            <property name="text" >
+             <string>Default attribute accessor scope:</string>
+            </property>
+            <property name="wordWrap" >
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="2" column="0" >
+         <layout class="QGridLayout" >
+          <item row="0" column="0" >
+           <widget class="QLabel" name="textLabel1_3_2" >
+            <property name="text" >
+             <string>Default association field scope:</string>
+            </property>
+            <property name="wordWrap" >
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1" >
+           <widget class="QComboBox" name="m_assocFieldScopeCB" >
+            <property name="currentIndex" >
+             <number>3</number>
+            </property>
+            <item>
+             <property name="text" >
+              <string>Public</string>
+             </property>
+            </item>
+            <item>
+             <property name="text" >
+              <string>Private</string>
+             </property>
+            </item>
+            <item>
+             <property name="text" >
+              <string>Protected</string>
+             </property>
+            </item>
+            <item>
+             <property name="text" >
+              <string>From Parent Role</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+         </layout>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item row="1" column="0" >
+      <widget class="Q3GroupBox" name="groupBox1" >
+       <property name="sizePolicy" >
+        <sizepolicy vsizetype="Maximum" hsizetype="Preferred" >
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="title" >
+        <string>Documentation</string>
+       </property>
+       <layout class="QHBoxLayout" >
+        <item>
+         <widget class="QLabel" name="textLabel1" >
+          <property name="text" >
+           <string>Style:</string>
+          </property>
+          <property name="wordWrap" >
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QComboBox" name="m_SelectCommentStyle" >
+          <item>
+           <property name="text" >
+            <string>Hash (#)</string>
+           </property>
+          </item>
+          <item>
+           <property name="text" >
+            <string>Begin-End (=begin  =end)</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item row="0" column="0" >
+      <widget class="QLabel" name="textLabel1_2" >
+       <property name="sizePolicy" >
+        <sizepolicy vsizetype="Maximum" hsizetype="Preferred" >
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text" >
+        <string>&lt;p align="center">Ruby Code Generation&lt;/p></string>
+       </property>
+       <property name="wordWrap" >
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+  </layout>
+ </widget>
+ <layoutdefault spacing="6" margin="11" />
+ <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <customwidgets>
+  <customwidget>
+   <class>Q3GroupBox</class>
+   <extends>QGroupBox</extends>
+   <header>Qt3Support/Q3GroupBox</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
+ <resources/>
+ <connections/>
+</ui>
