--- a/umbrello/codegenerators/dcodegenerationformbase.ui
+++ b/umbrello/codegenerators/dcodegenerationformbase.ui
@@ -32,18 +32,24 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="maximumSize" >
+        <size>
+         <width>16777215</width>
+         <height>50</height>
+        </size>
+       </property>
        <property name="title" >
         <string>Project Generation</string>
        </property>
        <layout class="QVBoxLayout" >
         <property name="leftMargin" >
-         <number>0</number>
+         <number>4</number>
         </property>
         <property name="topMargin" >
          <number>0</number>
         </property>
         <property name="rightMargin" >
-         <number>0</number>
+         <number>4</number>
         </property>
         <property name="bottomMargin" >
          <number>0</number>
@@ -71,13 +77,13 @@
        </property>
        <layout class="QGridLayout" >
         <property name="leftMargin" >
-         <number>0</number>
+         <number>4</number>
         </property>
         <property name="topMargin" >
          <number>0</number>
         </property>
         <property name="rightMargin" >
-         <number>0</number>
+         <number>4</number>
         </property>
         <property name="bottomMargin" >
          <number>0</number>
@@ -142,8 +148,18 @@
           <property name="bottomMargin" >
            <number>0</number>
           </property>
+          <item row="0" column="0" >
+           <widget class="QLabel" name="textLabel1_3" >
+            <property name="text" >
+             <string>Default attribute accessor scope:</string>
+            </property>
+            <property name="wordWrap" >
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
           <item row="0" column="1" >
-           <widget class="QComboBox" name="m_accessorScopeCB" >
+           <widget class="KComboBox" name="m_accessorScopeCB" >
             <property name="currentIndex" >
              <number>3</number>
             </property>
@@ -167,16 +183,6 @@
               <string>From Parent Object</string>
              </property>
             </item>
-           </widget>
-          </item>
-          <item row="0" column="0" >
-           <widget class="QLabel" name="textLabel1_3" >
-            <property name="text" >
-             <string>Default attribute accessor scope:</string>
-            </property>
-            <property name="wordWrap" >
-             <bool>false</bool>
-            </property>
            </widget>
           </item>
          </layout>
@@ -206,7 +212,7 @@
            </widget>
           </item>
           <item row="0" column="1" >
-           <widget class="QComboBox" name="m_assocFieldScopeCB" >
+           <widget class="KComboBox" name="m_assocFieldScopeCB" >
             <property name="currentIndex" >
              <number>3</number>
             </property>
@@ -245,24 +251,30 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="maximumSize" >
+        <size>
+         <width>16777215</width>
+         <height>100</height>
+        </size>
+       </property>
        <property name="title" >
         <string>Documentation</string>
        </property>
        <layout class="QHBoxLayout" >
         <property name="leftMargin" >
-         <number>0</number>
+         <number>4</number>
         </property>
         <property name="topMargin" >
          <number>0</number>
         </property>
         <property name="rightMargin" >
-         <number>0</number>
+         <number>4</number>
         </property>
         <property name="bottomMargin" >
          <number>0</number>
         </property>
         <item>
-         <widget class="QLabel" name="textLabel1" >
+         <widget class="QLabel" name="ui_textLabelStyle" >
           <property name="text" >
            <string>Style:</string>
           </property>
@@ -272,7 +284,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QComboBox" name="m_SelectCommentStyle" >
+         <widget class="KComboBox" name="m_SelectCommentStyle" >
           <item>
            <property name="text" >
             <string>Slash-Slash (//)</string>
@@ -289,12 +301,18 @@
       </widget>
      </item>
      <item row="0" column="0" >
-      <widget class="QLabel" name="textLabel1_2" >
+      <widget class="QLabel" name="ui_textLabelTitle" >
        <property name="sizePolicy" >
         <sizepolicy vsizetype="Maximum" hsizetype="Preferred" >
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+       <property name="maximumSize" >
+        <size>
+         <width>16777215</width>
+         <height>40</height>
+        </size>
        </property>
        <property name="text" >
         <string>&lt;p align="center">D Code Generation&lt;/p></string>
@@ -310,6 +328,13 @@
  </widget>
  <layoutdefault spacing="6" margin="11" />
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <customwidgets>
+  <customwidget>
+   <class>KComboBox</class>
+   <extends>QComboBox</extends>
+   <header>kcombobox.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
