i18n style guide fixes: http://techbase.kde.org/Projects/Usability/HIG/Capitalization
svn path=/trunk/KDE/kdesdk/umbrello/; revision=963898

--- a/umbrello/codegenwizard/codegenselectpage.ui
+++ b/umbrello/codegenwizard/codegenselectpage.ui
@@ -72,7 +72,7 @@
           <string>Add class for code generation</string>
          </property>
          <property name="text" >
-          <string>add >></string>
+          <string>Add >></string>
          </property>
          <property name="icon" >
           <iconset>../../../../../../../</iconset>
@@ -101,7 +101,7 @@
           <string>Remove class from Code Generation</string>
          </property>
          <property name="text" >
-          <string>&lt;&lt; remove</string>
+          <string>&lt;&lt; Remove</string>
          </property>
          <property name="icon" >
           <iconset>../../../../../../../</iconset>
